# lucoascript

./: LICENSE  MANIFEST.in  README.md  lexer.py  main.py  parser.py  pyproject.toml  runtime.py
examples/: hello.ls1  os_demo.ls1
lucoa/: __init__.py  cli.py  lexer.py  parser.py  runtime.py
lucoa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lucoa/modules/: __init__.py  ollama.py  os.py
packaging/: README.md
packaging/arch/: PKGBUILD
